5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1644_2704.log
== SUBMITION (2019-04-09 16:56:23) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = float( input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
	else:
		print(tp1)
-- EXECUTION TIME:
0.129716
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:56:36) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = float( input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
	else:
	print(tp1)
-- EXECUTION TIME:
0.182353
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:56:37) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = float( input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
	else:
	print(tp1)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:56:43) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = float( input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
else:
	print(tp1)
-- EXECUTION TIME:
0.164579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2704/main.py", line 2, in <module>
    tp2 = float( input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:56:45) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = float( input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
else:
	print(tp1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tp2 = float( input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:57:15) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
else:
	print(tp1)
-- EXECUTION TIME:
0.142038
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    tp2 = input())
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:17) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
else:
	print(tp1)
-- ERROR:
File "XXXX", line 2
    tp2 = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:20) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
else:
	print(tp1)
-- ERROR:
File "XXXX", line 2
    tp2 = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:57:22) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = input(" sim ou nao:"))

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
else:
	print(tp1)
-- ERROR:
File "XXXX", line 2
    tp2 = input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:57:36) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = input(" sim ou nao:")

tp3 = (tp1 * 10)/100

if tp2 == "S":
	print(tp1+tp3)
else:
	print(tp1)
-- EXECUTION TIME:
0.133613
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:20:14) 
-- CODE:
tp1 = float( input("nota:"))
tp2 = input(" sim ou nao:")

tp3 = (tp1 * 10)/100

if tp2 == "N":
	print(tp1)
else:
	print(tp1+tp3)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
